--- a/ax3600.config
+++ b/ax3600.config
@@ -95,6 +95,10 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_wpad-openssl=y
 
+## Custom Theme and Configuration
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
+
 ## Redundant Default Packages
 CONFIG_PACKAGE_kmod-phy-aquantia=n
 CONFIG_PACKAGE_kmod-usb-core=n
